--- a/scss/main.scss
+++ b/scss/main.scss
@@ -192,7 +192,7 @@ img {
     background: rgba(255,255,255,0.9);
 }
 
-.intro-text {
+.headline {
     font-size: 1.25em;
     font-weight: 400;
     letter-spacing: 1px;
