MAD9013 Final - Bootstrap Sports Site

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,6 +3,24 @@
 //---------------------------------------------
 
 //---------------------------------------------
+//              Clearfix mixin
+//---------------------------------------------
+
+@mixin clearfix {
+
+    &:before, &:after{
+        content: " ";
+        display: table;
+    }
+
+    &:after{
+        clear: both;
+    }
+
+    *zoom: 1;
+  }
+
+//---------------------------------------------
 //              Pages mixin
 //---------------------------------------------
 
