--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,6 @@ h4, h5, h6 {
   font-weight: 900;
   letter-spacing: 2px;
   color: #777;
-  float: left;
   height: 50px;
   padding: 15px 11px;
   font-size: 18px;
@@ -434,9 +433,7 @@ h4, h5, h6 {
 /********************************************
                 BACKGROUNDS
 ********************************************/
-body {
-  background: rgba(172, 173, 171, 0.5); }
-
+body,
 .navbar-nav li:hover {
   background: rgba(172, 173, 171, 0.5); }
 
