--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,7 +41,7 @@ footer p {
     font-family: $font-secondary;
 }
 
-@media screen and (min-width: 768px) {
+@media #{$sm-min} {
     .league { font-family: $font-tertiary; }
 }
 
@@ -52,8 +52,8 @@ footer p {
 .navbar-league {
     font-weight: 900;
     letter-spacing: 2px;
-    color: #777;
-    float: left;
+    color: $color-gray-b;
+    //float: left;
     height: 50px;
     padding: 15px 11px;
     font-size: 18px;
@@ -102,13 +102,11 @@ p {
                         BACKGROUNDS
         ********************************************/
 
-body {
-    background: rgba(172, 173, 171, 0.5);
+body,
+.navbar-nav li:hover {
+    background: $color-lighter;
 }
 
-.navbar-nav li:hover {
-    background: rgba(172, 173, 171, 0.5);
-}
 
         /********************************************
                         BACKGROUND IMAGES
