MAD9013 Final - Bootstrap Sports Site

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -63,3 +63,19 @@
     filter: alpha(opacity=($opacity * 100));
     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=" + ($opacity * 100);
  }
+
+//---------------------------------------------
+//              Mixin Image Center
+//---------------------------------------------
+
+@mixin imgCenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+//%imgCenter {
+//  display: block;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
